--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>Changelog</title>
 </head>
 <body>
-    
+    <div id="changelog-container">
+        <h1>Changelog</h1>
+        <p>Here's everything we have shipped in the past few days</p>
+        <div id="date-box">
+        <p class="date">September 3, 2024</p>
+        <p class="date">August 28, 2024</p>
+        <p class="date">August 25, 2024</p>
+        <p class="date">August 22, 2024</p>
+        <p class="date">August 15, 2024</p>
+        <p class="date">August 10, 2024</p>
+        <p class="date">August 1, 20244</p>
+        </div>
+        <div id="dot-box">
+
+        </div>
+    </div>
 </body>
 </html>
