add content to divs

--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
         <p class="date">August 1, 20244</p>
         </div>
         <div id="dot-box">
+        <div class="dot">⚫</div>
+        <div class="dot">⚫</div> 
+        <div class="dot">⚫</div>
+        <div class="dot">⚫</div>
+        <div class="dot">⚫</div>
+        <div class="dot">⚫</div>
+        <div class="dot">⚫</div>
+
+        </div>
+        <div id="progress-box">
+        <div class="progress">Announcing Projects on Frontend Roadmap</div>
+        <div class="progress">Build your learning habits with learning streaks</div>
+        <div class="progress">Git and Github Roadmap</div>
+        <div class="progress">Submit your project solution and get feedback</div>
+        <div class="progress">Backend Project Ideas</div>
+        <div class="progress">Redis roadmap</div>
+        <div class="progress">Changelog page to help you stay in the loop</div>
 
         </div>
     </div>
