create a progress bar

--- a/index.html
+++ b/index.html
@@ -10,34 +10,54 @@
     <div id="changelog-container">
         <h1>Changelog</h1>
         <p>Here's everything we have shipped in the past few days</p>
+        <div id="progress-bar">
         <div id="date-box">
         <p class="date">September 3, 2024</p>
+        <br>
         <p class="date">August 28, 2024</p>
+        <br>
         <p class="date">August 25, 2024</p>
+        <br>
         <p class="date">August 22, 2024</p>
+        <br>
         <p class="date">August 15, 2024</p>
+        <br>
         <p class="date">August 10, 2024</p>
+        <br>
         <p class="date">August 1, 20244</p>
         </div>
         <div id="dot-box">
         <div class="dot">⚫</div>
+        <br>
         <div class="dot">⚫</div> 
+        <br>
         <div class="dot">⚫</div>
+        <br>
         <div class="dot">⚫</div>
+        <br>
         <div class="dot">⚫</div>
+        <br>
         <div class="dot">⚫</div>
+        <br>
         <div class="dot">⚫</div>
 
         </div>
         <div id="progress-box">
-        <div class="progress">Announcing Projects on Frontend Roadmap</div>
-        <div class="progress">Build your learning habits with learning streaks</div>
-        <div class="progress">Git and Github Roadmap</div>
-        <div class="progress">Submit your project solution and get feedback</div>
-        <div class="progress">Backend Project Ideas</div>
-        <div class="progress">Redis roadmap</div>
-        <div class="progress">Changelog page to help you stay in the loop</div>
+        <p class="progress">Announcing Projects on Frontend Roadmap</p>
+        <br>
+        <p class="progress">Build your learning habits with learning streaks</p>
+        <br>
+        <p class="progress">Git and Github Roadmap</p>
+        <br>
+        <p class="progress">Submit your project solution and get feedback</p>
+        <br>
+        <p class="progress">Backend Project Ideas</p>
+        <br>
+        <p class="progress">Redis roadmap</p>
+        <br>
+        <p class="progress">Changelog page to help you stay in the loop</p>
 
+        </div>
         </div>
     </div>
 </body>
