--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Changelog</title>
 </head>
 <body>
-    <div id="changelog-container">
+    <main>
         <h1>Changelog</h1>
         <p>Here's everything we have shipped in the past few days</p>
         <div id="progress-bar">
@@ -24,7 +24,7 @@
         <br>
         <p class="date">August 10, 2024</p>
         <br>
-        <p class="date">August 1, 20244</p>
+        <p class="date">August 1, 2024</p>
         </div>
         <div id="dot-box">
         <div class="dot">⚫</div>
@@ -59,6 +59,7 @@
 
         </div>
         </div>
-    </div>
+        <button>Visit Complete Changelog</button>
+    </main>
 </body>
 </html>
